Fix readme and z-index

--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -4,7 +4,6 @@
   bottom: 0;
   width: 100%;
   height: 100vh;
-  z-index: -1;
 }
 
 .mapboxgl-popup {
