--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -7,6 +7,7 @@
   height: 20rem;
   margin-left: .5rem;
   border-radius: .5rem;
+  z-index: 2;
 
   &__title {
     text-align: center;
