--- a/src/components/SidebarToggle/SidebarToggle.scss
+++ b/src/components/SidebarToggle/SidebarToggle.scss
@@ -1,4 +1,5 @@
 .sidebar-toggle {
   cursor: pointer;
   width: 50px;
+  z-index: 2;
 }
